--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -9,14 +9,14 @@ body, html { /* Evitar que a pagina aumente pro lado */
 
 ::selection {
     color: rgb(255, 255, 255);
-    background-color: purple;
+    background-color: rgb(126, 7, 126);
 }
 
 body{
     background-size: cover;
     background-position: center;
     height: 100vh; 
-    background-image: linear-gradient(180deg, #050d13, #010a0f );
+    background-image: linear-gradient(180deg, #030c13, #00090e );
     background-repeat: no-repeat;
 }
 header{
@@ -77,7 +77,18 @@ p{
 
     color: rgb(255, 255, 255);
     margin-left: 20px;
+}
 
+.amarelo{
+    color: rgb(240, 240, 61);
+}
+
+.rosa{
+    color: rgb(255, 68, 208);
+}
+
+.azulzinho{
+    color: rgb(72, 245, 187);
 }
 
 h2{
@@ -97,12 +108,13 @@ h2:hover{
 }
 
 h3{
+    background-color:#00396ab2 ;
+    padding: 8px;
     margin-left: 20px;
     font-family: "New Amsterdam", sans-serif; font-weight: bold;
     font-style: normal; font-size: 30px;
     color: rgb(255, 255, 255);
     clear: both;
-    animation: titulos 2s ease-in-out alternate;
 }
 
 video{
@@ -116,7 +128,7 @@ video{
 .Box-Bem-Vindo{
     border: #ffffff2d solid 1px; border-radius: 5px;
     background-color:#0e1922;
-    
+    clear: both;
     box-shadow: 10px 10px 24px 0px rgba(0, 0, 0, 0.322); 
     padding: 10px;
     display: flex; flex-direction: column; align-items: center;
@@ -129,7 +141,7 @@ video{
 }
 
 .Box-Bem-Vindo p{
-    text-align: center; /*O texto no centro n pode ser longo igual esta agora*/
+    text-align: left; /*O textos ficaram meios grandinhos ent a esq é melhor msm*/
     margin-top: 15px;
     margin-bottom: 15px;
 }
@@ -185,7 +197,7 @@ video{
     
 }
 .caixinha-img-textinho img{
-    border: #ffffff79 solid 2px;
+    border: #00fff279 solid 2px;
     border-radius: 50%;
     width: 200px;
     height: 200px;
