--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -57,7 +57,7 @@ header a:hover{
 }
 
 h1{
-    font-family: "Oswald", sans-serif;
+    font-family: 'Catamaran';
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
@@ -105,7 +105,7 @@ p a{
 
 h2{
     margin-left: 20px;
-    font-family: "Oswald", sans-serif;
+    font-family: 'Montserrat';
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
@@ -128,7 +128,7 @@ h3{
     background-color:#00396ab2 ;
     padding: 8px;
     margin-left: 20px;
-    font-family: "New Amsterdam", sans-serif; font-weight: bold;
+    font-family: 'Montserrat Thin'; font-weight: bold;
     font-style: normal; font-size: 30px;
     color: rgb(255, 255, 255);
     clear: both;
@@ -223,7 +223,7 @@ video{
 } 
 
 details{
-    /*BOTA A MSM FONTE DO H2*/
+    font-family: 'Montserrat';
     font-size: 30px;
     color: #dbe91d;
     border: #ffffff2d solid 1px; border-radius: 8px;
@@ -238,4 +238,23 @@ details{
 @keyframes titulos{
     0%{font-size: 30px; }
     100%{font-size: 40px;}
+}
+
+/*Fontes*/
+/*h1*/
+@font-face {
+    font-family: 'Catamaran';
+    src: url('fonts/Catamaran/static/Catamaran-Black.ttf') format('truetype');
+}
+
+/*h2*/
+@font-face {
+    font-family: 'Montserrat';
+    src: url('fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
+}
+
+/*h3*/
+@font-face {
+    font-family: 'Montserrat Thin';
+    src: url('fonts/Montserrat/static/Montserrat-Thin.ttf') format('truetype');
 }
