--- a/Untitled-1.css
+++ b/Untitled-1.css
@@ -20,7 +20,7 @@ body{
     background-repeat: no-repeat;
 }
 header{
-    background-color: #00386a;
+    background-color: #002749;
     box-shadow: 10px 10px 24px 0px rgba(0, 0, 0, 0.322);
     box-sizing: border-box;
     position: sticky; top:0;
@@ -72,7 +72,7 @@ p{
     font-weight: weight;  font-style: normal;
     font-variation-settings: "wdth" 100;
 
-    font-size: 22px; /*Pensar em tamanho legal pra qlr pessoa conseguir ver de boa*/
+    font-size: 22px;
 
     color: rgb(255, 255, 255);
     margin-left: 20px;
@@ -89,6 +89,11 @@ p a{
     background-color: rgb(0, 47, 255); 
     border-radius: 8px;
     padding: 4px;
+}
+
+p a:hover{
+    text-decoration:underline;
+    color: rgb(255, 223, 42);
 }
 
 .amarelo{
@@ -125,8 +130,9 @@ h2:hover{
 }
 
 h3{
-    background-color:#00396ab2 ;
-    padding: 8px;
+    
+    background-image: linear-gradient(90deg, #00396adc, #00396ab2, #00396a7c, #00396a00);
+    padding: 10px;
     margin-left: 20px;
     font-family: 'Montserrat Thin'; font-weight: bold;
     font-style: normal; font-size: 30px;
@@ -164,6 +170,7 @@ video{
 }
 
 .Box-Bem-Vindo img:hover{
+    margin-top: 15px;
     height: 400px;
     width: 620px;
     filter: brightness(80%); 
@@ -171,6 +178,7 @@ video{
 }
 
 .Box-Bem-Vindo img{
+    margin-top: 15px;
     border-radius: 5px;
     height: 380px;
     width: 600px;
@@ -197,7 +205,7 @@ video{
     text-align: center;
     box-sizing: border-box;
     border: #ffffff2d solid 1px; border-radius: 8px;
-    background-color:#0e1922;
+    background-color:#060f16d0;
     box-shadow: 10px 10px 24px 0px rgba(0, 0, 0, 0.322); 
     margin: 15px;
     
@@ -205,20 +213,23 @@ video{
 .caixinha-img-textinho img{
     border: #ffffff25 solid 2px;
     border-radius: 50%;
-    width: 200px;
-    height: 200px;
+    width: 190px;
+    height: 190px;
     transition: 500ms ease-in-out;
+    filter: brightness(50%);
 }
 
 .caixinha-img-textinho img:hover{
-    border: #ffffff79 solid 5px;
+    border: #ffffffbb solid 5px;
     width: 250px;
     height: 250px;
+    filter: brightness(100%);
 }
 
 .codigo-qr{
     display: block;
     margin: auto;
+    margin-bottom: 15px;
     width: 15%;
 } 
 
